2008-05-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	[ 1865183 ] bfd.h not used for checking of libbfd
	* configure.ac: Don't just check for bfd.h but complain
	at configure time if it has not been found.

2008-05-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	[ 1880464 ] AVR-Dragon needs libusb-dev
	* src/jtaggeneric.cc (jtag::jtag): throw an error message
	and bail out when called with "-j usb" but not configured
	for libusb support.

2008-05-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version.

2008-05-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	[ 1833340 ] cannot read program counter/Watchdog has expired
	* src/jtag2run.cc (jtag2::eventLoop): Carefully handle all the
	different events that could be posted by the ICE, as opposed to
	just assuming every event would work like a BREAK where
	AVaRICE is then allowed to go ahead, and fetch the program
	counter value.

2008-02-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: Add entries for ATtiny84 and ATtiny85.

2008-01-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	[ 1831392 ] --jtag option does not default to usb using dragon
	* src/main.cc: Fix logic for defaulting jtagDeviceName so the
	environment variable JTAG_DEV will be honoured, yet the AVR Dragon
	will still default to USB rather than /dev/avrjtag.

2008-01-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	[ 1833342 ] useless warning message about jtag bitrate using dragon
	* src/main.cc: Restrict the warning about defaulting the JTAG bit
	rate to JTAG protocols only.

2008-01-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	[ 1869060 ] jtag daisy chain bits limitations
	* src/main.cc: Apply the correct limitations for JTAG
	daisy-chaining.

2008-01-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/main.cc: Issue a warning when trying to chip erase in
	debugWire mode.
	* doc/avarice.1: Document that chip erase is not supported in
	debugWire mode.

2008-01-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
