@@ -2,7 +2,7 @@
 Copyright (C) 2001 Scott Finneran
 Copyright (C) 2003 Intel Corporation
 Copyright (C) 2003, 2004 Theodore A. Roth
-Copyright (C) 2005, 2006, 2007 Joerg Wunsch
+Copyright (C) 2005 - 2008 Joerg Wunsch
 
 Permission is granted to make and distribute verbatim copies of this
 manual provided the copyright notice and this permission notice are
@@ -152,7 +152,7 @@ Set the bitrate that the JTAG box communicates with the AVR target device.
 This must be less than 1/4 of the frequency of the target. Valid values are
 1 MHz, 500 kHz, 250 kHz or 125 kHz for the JTAG ICE mkI,
 anything between 22 kHz through approximately 6400 kHz for the
-JTAG ICE mkII. (default: 1 MHz)
+JTAG ICE mkII. (default: 250 kHz)
 .TP
 .BR \-C ,\  \-\-capture
 Capture running program.
